Switch to jRuby 9.2.6.0, reduce size of Docker image