@@ -8,24 +8,39 @@
 # create container with tnsnames.ora from host and timezone set
 # > docker run --name panorama -p8080:8080 -v $TNS_ADMIN/tnsnames.ora:/etc/tnsnames.ora -e TNS_ADMIN=/etc -e TZ="Europe/Berlin" -d rammpeter/panorama:latest
 
+# STAGE 1: JRE build
+FROM openjdk:18 as openjdk
+
+# Build small JRE image
+RUN $JAVA_HOME/bin/jlink \
+         --verbose \
+         --add-modules ALL-MODULE-PATH \
+         --strip-debug \
+         --no-man-pages \
+         --no-header-files \
+         --compress=2 \
+         --output /customjre
+
+# STAGE 2: App build
 FROM oraclelinux:8-slim as build_stage
 
 ENV BACKEND_SRC_PATH=.
 ARG JRUBY_VERSION
-ENV PATH "$PATH:/opt/jruby-$JRUBY_VERSION/bin"
+ENV JAVA_HOME=/opt/jre
+ENV PATH "${JAVA_HOME}/bin:/opt/jruby-$JRUBY_VERSION/bin:$PATH"
+
+WORKDIR /opt/panorama
+
+COPY --from=openjdk /customjre $JAVA_HOME
+COPY ${BACKEND_SRC_PATH} .
 
 RUN  echo "### microdnf update" && \
      microdnf update && \
      echo "### add missing tools" && \
      microdnf install wget tar gzip curl bash tar wget procps findutils vim tzdata git && \
-     echo "microdnf install procps vim util-linux podman jq bc" && \
-     echo "### install java" && \
-     wget https://download.oracle.com/java/17/latest/jdk-17_linux-x64_bin.rpm && \
-     rpm -Uvh jdk-17_linux-x64_bin.rpm && rm jdk-17_linux-x64_bin.rpm && \
-     java -version && \
      echo "### install jruby" && \
-     cd /opt && wget https://repo1.maven.org/maven2/org/jruby/jruby-dist/$JRUBY_VERSION/jruby-dist-$JRUBY_VERSION-bin.tar.gz && \
-     cd /opt && tar -xvf jruby-dist-$JRUBY_VERSION-bin.tar.gz && rm jruby-dist-$JRUBY_VERSION-bin.tar.gz && \
+     (cd /opt && wget https://repo1.maven.org/maven2/org/jruby/jruby-dist/$JRUBY_VERSION/jruby-dist-$JRUBY_VERSION-bin.tar.gz) && \
+     (cd /opt && tar -xvf jruby-dist-$JRUBY_VERSION-bin.tar.gz && rm jruby-dist-$JRUBY_VERSION-bin.tar.gz) && \
      ln -s /opt/jruby-$JRUBY_VERSION/bin/jruby /opt/jruby-$JRUBY_VERSION/bin/ruby && \
      ruby -v && \
      echo "### show  timezone" && \
@@ -38,45 +53,34 @@ RUN  echo "### microdnf update" && \
      gem install --no-document bundler && \
      echo "### set .gemrc" && \
      echo "gem: --no-rdoc --no-ri" > ~/.gemrc && \
-     echo "### cleanup and list installed gems" && \
-     gem cleanup && gem list
+     echo "### bundle config set deployment 'true'" && \
+     bundle config set deployment 'true' && \
+     echo "### remove old vendor gems" && \
+     rm -rf vendor/bundle && \
+     echo "### bundle install" && \
+     bundle install --jobs 4 && \
+     echo "### bundle exec rake assets:precompile" && \
+     bundle exec rake assets:precompile && \
+     echo "### reduce storage / remove unnecessary packages" && \
+     gem cleanup && gem list && \
+     microdnf clean all && \
+     rm -rf $HOME/.bundle/cache && \
+     rm -f *.war                                      && \
+     rm -f Panorama.log                                      && \
+     rm -f Usage.log                                         && \
+     rm -rf tmp/cache/*                                      && \
+     rm -rf log/*
 
-
-WORKDIR /opt/panorama
-
-COPY ${BACKEND_SRC_PATH}/Gemfile* ./
-
-RUN  bundle config set deployment 'true' && \
-     bundle install --jobs 4
-
-COPY ${BACKEND_SRC_PATH} .
-RUN  bundle exec rake assets:precompile
-
-RUN echo "### reduce storage / remove unnecessary packages" && \
-    rm -f /usr/java/latest/lib/src.zip                      && \
-    rm -f Panorama.war                                      && \
-    rm -f Panorama.log                                      && \
-    rm -f Usage.log                                         && \
-    rm -rf tmp/cache/*                                      && \
-    rm -rf log/*
-
-FROM oraclelinux:8-slim as run_stage
+FROM scratch
 MAINTAINER Peter Ramm <Peter@ramm-oberhermsdorf.de>
 
 ARG JRUBY_VERSION
-ENV PATH            "$PATH:/opt/jruby-$JRUBY_VERSION/bin"
-ENV JAVA_HOME       /usr/java/latest
-
-RUN   echo "### microdnf update" && \
-      microdnf update && \
-      echo "### Register java package" && \
-      alternatives --install /usr/bin/java java /usr/java/latest/bin/java 1
+ENV JAVA_HOME=/opt/jre
+ENV PATH "${JAVA_HOME}/bin:/opt/jruby-$JRUBY_VERSION/bin:$PATH"
 
 WORKDIR /opt/panorama
-COPY --from=build_stage /root                       /root
-COPY --from=build_stage /usr/java                   /usr/java
-COPY --from=build_stage /opt/jruby-$JRUBY_VERSION   /opt/jruby-$JRUBY_VERSION
-COPY --from=build_stage /opt/panorama               /opt/panorama
+
+COPY --from=build_stage / /
 
 EXPOSE 8080/tcp
 
